--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_ml_vision: ^0.0.7
-  camera: 0.9.5
+  google_ml_vision: ^0.0.8
+  camera: 0.11.0+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
